# Stagy58

./: .gitignore  Design.adoc  LICENSE.adoc  Readme.adoc
CvavrUSBLeft/: .gitignore  CvavrUSBLeft.atsln  CvavrUSBLeft.cproj  Split82Firmware.cwx  adc_init.c  analog_comp_init.c  clock_init.c  event_system_init.c  event_system_init.h  main.c  ports_init.c  ports_init.h  rtc_init.c  rtc_init.h  spi_init.c  timers_init.c  timers_init.h  usarts_init.c  usb_init.c  usb_init.h  watchdog_init.c
MacSplitNN/: KB2040.kicad_sym  MacSplit60.kicad_pcb  MacSplit60.kicad_pro  MacSplit60.kicad_sch  fp-lib-table  sym-lib-table
MacSplitNNfirmware/: boot.py  code_Right_IOExpander.py  hid_simple_test.py  matrix_scan_keypad.py
Ortho62Unified/: Ortho62Unified.kicad_pcb  Ortho62Unified.kicad_pro  Ortho62Unified.kicad_sch  fp-lib-table
Ortho66/: .cproject  .gitignore  .mxproject  .project  Ortho66.ioc
Ortho66CircuitPython/: code.py
Ortho66PCB/: Ortho66PCB.kicad_pcb  Ortho66PCB.kicad_pro  Ortho66PCB.kicad_sch
Ortho82LUFA/: .gitignore  Keyboard.c  Keyboard.h  makefile
Ortho82SplitFirmware/: .gitignore  circuitpy_boot.py  keyboard_stepbystep.py  ortho82_split_keyboard.py
Ortho82Unifiedfirmware/: .gitignore  Ortho82UnifiedFirmware.atsln  Ortho82UnifiedFirmware.componentinfo.xml  Ortho82UnifiedFirmware.cproj  Ortho82UnifiedFirmware.cwx  Ortho82UnifiedFirmware.prj  Split82Firmware.atsln  Split82Firmware.cproj  Split82Firmware.cwx  adc_init.c  adc_init.h  analog_comp_init.c  (+29 more)
ortho66firmware/: Cargo.toml  memory.x
ortho66firmware/.cargo/: config.toml
ortho66firmware/src/: main.rs
(+128 files in other folders)
